<resources>
    <string name="app_name">JimAppv2A</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Perfil</string>
    <string name="menu_calificaciones">Calificaciones</string>
    <string name="menu_inasistencias">Inasistencias</string>
    <string name="menu_avisos">Avisos</string>
    <string name="sign_out">Salir</string>

    <string name="nombre">Nombre</string>

    <string name="home_second">Home Second</string>
</resources>
