<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.jimappv2a.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_new">
    </fragment>

    <fragment
        android:id="@+id/nav_calificaciones"
        android:name="com.example.jimappv2a.ui.calificaciones.CalificacionesFragment"
        android:label="@string/menu_calificaciones"
        tools:layout="@layout/fragment_calificaciones" />

    <fragment
        android:id="@+id/nav_inasistencias"
        android:name="com.example.jimappv2a.ui.inasistencias.InasistenciasFragment"
        android:label="@string/menu_inasistencias"
        tools:layout="@layout/fragment_inasistencias" />

    <fragment
        android:id="@+id/nav_avisos"
        android:name="com.example.jimappv2a.ui.avisos.AvisosFragment"
        android:label="@string/menu_avisos"
        tools:layout="@layout/fragment_avisos" />
</navigation>